test/pass/success_has_stdout/src/SuccessHasStdout.hx
package;

class SuccessHasStdout {
	public static function identity<T>(x:T):T {
		trace("hello");
		return x;
	}
}
