test/fail/fail_has_stdout/identity/src/Identity.hx
package;

class Identity {
	public static function identity<T>(x:T):T {
		trace("hello");
		return x;
	}
}
